SyntacticAnalyzer/tests/fail/clase03.java
class foo {
	foo () {

	}
}

// espera "class"
anid {

}
